--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>HOME</title>
+    <title>首页</title>
     <link href="css/global.css" rel="stylesheet" />
     <link href="css/article.css" rel="stylesheet" />
 </head>
@@ -12,16 +12,17 @@
 
 <div class="header">
     <div class="nav">
-        <a href="index.html" class="on">HOME</a>
-        <a href="web/about.html">ABOUT ME</a>
-        <a href="web/contact.html">CONTACT</a>
+        <a href="index.html" class="on">首页</a>
+        <a href="web/about.html">详情</a>
+        <a href="web/contact.html">联系我</a>
     </div>
 </div>
 <div class="main">
     <div class="content-index">
         <div class="index-center">
-            <h1>我的 My webpage</h1>
-            <a href="web/about.html">READ MORE</a>
+            <img src="image/logo1.png" class="img1">
+            <p>欢迎，这是我的个人网站。</p>
+            <a href="web/about.html">了解更多&nbsp;></a>
         </div>
     </div>
 </div>
