--- a/web/music.html
+++ b/web/music.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>详情</title>
+    <title>音乐</title>
     <link href="../css/global.css" rel="stylesheet" />
     <link href="../css/article.css" rel="stylesheet" />
 </head>
@@ -17,27 +17,26 @@
     </div>
 </div>
 <div class="main">
-    <div class="about-bg">
-        <div class="content-about">
-            <div class="about-logo">
+    <div class="music-bg">
+        <div class="content-music">
+            <div class="music-logo">
                 <img src="../image/logo1.png" class="logo_about">
             </div>
-            <p class="about-title">了解我，从这里开始。</p>
             <ul>
                 <li>
-                    <a href="game.html"><img src="../image/game.png" alt="" /></a>
-                    <span>游戏</span>
-                    <p>游戏玩家</p>
+                    <img src="../image/music/img1.png" class="music-rotate">
+                    <audio controls src="../music/1.m4a"></audio>
+                    <p>致明日的舞-陈奕迅</p>
                 </li>
                 <li>
-                    <a href="music.html"><img src="../image/music.jpg" alt="" /></a>
-                    <span>音乐</span>
-                    <p>音乐爱好者</p>
+                    <img src="../image/music/img2.png" class="music-rotate">
+                    <audio controls src="../music/2.m4a"></audio>
+                    <p>此生无可恋，唯曲悦丹田-刺猬</p>
                 </li>
-                <li class="last">
-                    <a href="code.html"><img src="../image/code.png" alt="" /></a>
-                    <span>CODE</span>
-                    <p>开发者</p>
+                <li>
+                    <img src="../image/music/img3.png" class="music-rotate">
+                    <audio controls src="../music/3.m4a"></audio>
+                    <p>海浪-deca joins</p>
                 </li>
             </ul>
         </div>
